# cat-page-django-exemple

./: pyproject.toml
app1/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
app1/migrations/: 0001_initial.py  0002_alter_cat_options_cat_gender.py  0003_cat_about_cat.py
app1/static/app1/css/: styles.css
app1/templates/app1/: about.html  add_cat.html  base.html  cat.html  index.html  list_breeds.html  login.html  register.html
app1/templatetags/: app1_tags.py
config/: settings.py  urls.py
static/app1/css/: styles.css
