[tool.poetry]
name = "dir1"
version = "0.1.0"
description = ""
authors = ["Yulia Illiriya <yulia.illiriya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
python-decouple = "^3.6"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
